use instanceof patterns